samples/_failures_safe/1761603383_e0fcea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e9bf1e82.c: In function ‘main’:
./samples/SAFE/__tmp_e9bf1e82.c:143:65: error: expected ‘)’ at end of input
  143 |     printf("Enter elements for first matrix (%d x %d):\n", rows1
      |           ~                                                     ^
      |                                                                 )
./samples/SAFE/__tmp_e9bf1e82.c:143:5: error: expected declaration or statement at end of input
  143 |     printf("Enter elements for first matrix (%d x %d):\n", rows1
      |     ^~~~~~
